--- a/peerswap/umbrel-app.yml
+++ b/peerswap/umbrel-app.yml
@@ -20,4 +20,5 @@ gallery:
 path: ""
 submitter: Impa10r
 submission: https://github.com/getumbrel/umbrel-apps/pull/932
-releaseNotes: "Adds channel Auto Fee functionality. See full changelog here: https://github.com/Impa10r/peerswap-web/blob/main/CHANGELOG.md"
+releaseNotes: >-
+  Adds channel Auto Fee functionality. See full changelog here: https://github.com/Impa10r/peerswap-web/blob/main/CHANGELOG.md
