rename default path name for storage

--- a/samba/data/smb.conf
+++ b/samba/data/smb.conf
@@ -8,7 +8,7 @@
         printcap name = /dev/null
         disable spoolss = yes
 
-[Data]
+[storage]
         path = /storage
         comment = Shared
         valid users = @smb
