Change NO_HTTPS env var to a string

--- a/peerswap/docker-compose.yml
+++ b/peerswap/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       # App
       NETWORK: $APP_BITCOIN_NETWORK
-      NO_HTTPS: true
+      NO_HTTPS: "true"
       # LND
       LND_HOST: ${APP_LIGHTNING_NODE_IP}:${APP_LIGHTNING_NODE_GRPC_PORT}
       LND_MACAROONPATH: /home/peerswap/.lnd/data/chain/bitcoin/${APP_BITCOIN_NETWORK}/admin.macaroon
