Fixed booleans for docker compose V1

--- a/mealie/docker-compose.yml
+++ b/mealie/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: on-failure
     environment:
       # Allow additional user sign-up without token
-      ALLOW_SIGNUP: true
+      ALLOW_SIGNUP: "true"
       PUID: 1000
       PGID: 1000
       MAX_WORKERS: 1
