--- a/stirling-pdf/docker-compose.yml
+++ b/stirling-pdf/docker-compose.yml
@@ -20,6 +20,6 @@ services:
       - ${APP_DATA_DIR}/data/logs:/logs
     environment:
       # Not needed as Umbrel authenticates the user
-      DOCKER_ENABLE_SECURITY: false
-      INSTALL_BOOK_AND_ADVANCED_HTML_OPS: true
+      DOCKER_ENABLE_SECURITY: "false"
+      INSTALL_BOOK_AND_ADVANCED_HTML_OPS: "true"
       LANGS: ALL
