Convert boolean env vars to strings for umbrelOS 0.5 compose compatibility

--- a/maybe/docker-compose.yml
+++ b/maybe/docker-compose.yml
@@ -17,13 +17,13 @@ services:
     env_file:
       - ${APP_DATA_DIR}/.env
     environment:
-      SELF_HOSTING_ENABLED: true
+      SELF_HOSTING_ENABLED: "true"
       PORT: 3063
       DB_HOST: db
       DB_PORT: 5432
       DATABASE_URL: postgres://maybe:maybe@db:5432/maybe
-      RAILS_FORCE_SSL: false
-      RAILS_ASSUME_SSL: false
+      RAILS_FORCE_SSL: "false"
+      RAILS_ASSUME_SSL: "false"
       POSTGRES_DB: maybe
       POSTGRES_USER: maybe
       POSTGRES_PASSWORD: maybe
