--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -3,11 +3,14 @@ id: maybe
 category: finance
 name: Maybe
 version: 'v0.1.0-alpha.7'
-tagline: Open-source OS for your personal finances
+tagline: The OS for your personal finances
 description: >-
-  Maybe Maybe is a fully (your finances are secure)
-  open-source OS for your personal finances built by
-  a small team alongside an incredible community
+  Maybe is a fully (your finances are secure) open-source OS for your personal finances built by
+  a small team alongside an incredible community.
+
+
+  This is an early access release of Maybe that is only available to those who self-host.
+  Maybe is under active development and is still working towards a stable release with a full feature set.
 releaseNotes: ""
 developer: Maybe
 website: https://maybe.co/
