Add multi-currency support instructions

--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -11,6 +11,16 @@ description: >-
 
   This is an early access release of Maybe that is only available to those who self-host.
   Maybe is under active development and is still working towards a stable release with a full feature set.
+
+
+  🛠️ MULTI-CURRENCY SUPPORT
+
+
+  Most currently available features will work out of the box. However, Maybe requires a Synth API key if you would like to use multi-currency support.
+
+  1. Sign up for a Synth API key at https://synthfinance.com/
+
+  2. Add your Synth API key to the .env file at ~/umbrel/app-data/maybe/.env
 releaseNotes: ""
 developer: Maybe
 website: https://maybe.co/
