--- a/yucca/umbrel-app.yml
+++ b/yucca/umbrel-app.yml
@@ -7,6 +7,7 @@ tagline: Simple NVR solution video surveillance
 description: >-
   Simple NVR solution video surveillance for home and business.  
   Perfect for both a solution for safe cities with thousands of cameras and launching a subscriber service, as well as for home use self-hosted.
+  [Android app](https://play.google.com/store/apps/details?id=app.yucca.android&utm_source=umbrel)
 releaseNotes: ""
 developer:  Yucca Stream
 website: https://yucca.app/
