--- a/budibase/umbrel-app.yml
+++ b/budibase/umbrel-app.yml
@@ -30,7 +30,7 @@ description: >-
 developer: Budibase
 website: https://budibase.com
 submitter: Sharknoon
-submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
+submission: https://github.com/getumbrel/umbrel-apps/pull/1178
 repo: https://github.com/Budibase/budibase
 support: https://github.com/Budibase/budibase/discussions
 gallery: []
