--- a/duplicati/umbrel-app.yml
+++ b/duplicati/umbrel-app.yml
@@ -30,7 +30,7 @@ description: >-
 developer: Duplicati
 website: https://duplicati.com/
 submitter: Sharknoon
-submission: https://github.com/getumbrel/umbrel-apps/pull/<number>
+submission: https://github.com/getumbrel/umbrel-apps/pull/1179
 repo: https://github.com/duplicati/duplicati
 support: https://forum.duplicati.com/
 gallery: []
