--- a/duplicati/umbrel-app.yml
+++ b/duplicati/umbrel-app.yml
@@ -1,7 +1,7 @@
 manifestVersion: 1
 id: duplicati
 name: Duplicati
-tagline: Store securely encrypted backups in the cloud!
+tagline: Store securely encrypted backups in the cloud
 category: files
 version: "2.0.9.101"
 port: 38476
