--- a/duplicati/umbrel-app.yml
+++ b/duplicati/umbrel-app.yml
@@ -3,7 +3,7 @@ id: duplicati
 name: Duplicati
 tagline: Store securely encrypted backups in the cloud
 category: files
-version: "2.0.9.101"
+version: "2.0.8.1_beta_2024-05-07"
 port: 38476
 description: >-
   Pick your own backend and store encrypted backups of your umbrel files anywhere!
