samba: update app description
Co-authored-by: Josua Frank <frank.josua@gmail.com>

--- a/samba/umbrel-app.yml
+++ b/samba/umbrel-app.yml
@@ -6,17 +6,24 @@ category: networking
 version: "4.20.1"
 port: 9445
 description: >-
-  Samba is the standard Windows interoperability suite of programs for Linux and Unix.
+📂 Simplify your file sharing with Samba!
+
+Samba is a powerful tool that makes it easy to share files across different devices on your network. It allows your Umbrel device to seamlessly share files with Windows, macOS, Linux, and more. Whether you're sharing documents, media files, or backups, Samba makes it simple and secure.
 
 
-  Samba is Free Software licensed under the GNU General Public License, the Samba project is a member of the Software Freedom Conservancy.
+📄 Effortless File Access
+
+Access and manage the files on your Umbrel device from any computer on your network. Say good bye to the complicated SSH access!
 
 
-  Since 1992, Samba has provided secure, stable and fast file and print services for all clients using the SMB/CIFS protocol, such as all versions of DOS and Windows, OS/2, Linux and many others.
+🖥️ Cross-Platform Compatibility
+
+Samba works with all major operating systems, including Windows, macOS, and Linux. Share your files without worrying about compatibility issues.
 
 
-  Samba is an important component to seamlessly integrate Linux/Unix Servers and Desktops into Active Directory environments. It can function both as a domain controller or as a regular domain member.
+🛡️ Secure and Reliable
 
+Samba has been providing secure and stable file sharing for over 30 years. Trust it to keep your files safe and accessible.
 developer: Samba
 website: https://www.samba.org/
 submitter: João Victor
