--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: bitcoin
 name: Lightning Terminal
-version: "0.13.0-alpha"
+version: "0.13.1-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -56,8 +56,8 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This release of Lightning Terminal (LiT) includes updates to the versions of
-  the integrated LND, Loop and Pool daemons.
+  This release of Lightning Terminal (LiT) includes an update to the version of
+  the integrated LND daemon.
 
 
   IMPORTANT NOTE: To avoid loss of funds, it's imperative that you read the
@@ -86,7 +86,7 @@ releaseNotes: >-
   feedback from the community.
 
 
-  This release packages LND v0.18.0-beta, Taproot Assets Daemon v0.3.3-alpha,
+  This release packages LND v0.18.1-beta, Taproot Assets Daemon v0.3.3-alpha,
   Loop v0.28.5-beta, Pool v0.6.4-beta and Faraday v0.2.13-alpha.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
