--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.106.4"
+version: "v1.107.2"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -48,25 +48,13 @@ releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich. 
 
 
-  This release is packed with many new features, improvements, and bug fixes. Highlights include:
+  Bug fixes include:
 
-  - Removal of the immich-microservices container
+  - Slow loading on the people page on the web
 
-  - Similar image detection and management
+  - Incorrect translation strings
 
-  - End-to-end acceleration for NVENC and QSV transcoding
-
-  - Better video thumbnails
-
-  - Email notifications for album events
-
-  - Per user email notifications settings
-
-  - Send a test email when configuring the SMTP email server
-
-  - Public roadmap: https://immich.app/roadmap/
-
-  - Translation on the web
+  - Fixed an issue of able to merge the same person into one
 
 
   Full release notes are found at https://github.com/immich-app/immich/releases
