use umbrel machine ip for oauth

--- a/home-assistant-fusion-ui/docker-compose.yml
+++ b/home-assistant-fusion-ui/docker-compose.yml
@@ -11,4 +11,4 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/fusion:/app/data
     environment:
-      HASS_URL: http://10.32.0.1:8123
+      HASS_URL: http://${UMBREL_LOCAL_IP}:8123
