--- a/affine/umbrel-app.yml
+++ b/affine/umbrel-app.yml
@@ -1,4 +1,4 @@
-manifestVersion: 1
+manifestVersion: 3
 id: affine
 name: Affine
 tagline: Open source alternative to Notion, Miro, and Airtable
@@ -24,7 +24,7 @@ description: >-
 
   3. Follow the steps to create your self-hosted cloud workspace. You are now ready to use Affine with your self-hosted instance!
 developer: toeverything
-website: https://affine.pro
+website: blaaaa
 submitter: Jasper
 submission: https://github.com/getumbrel/umbrel-apps/pull/990
 repo: https://github.com/toeverything/AFFiNE
@@ -33,8 +33,5 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-releaseNotes: ""
-dependencies: []
-path: ""
 defaultUsername: "admin@umbrel.local"
 deterministicPassword: true
