update release notes

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -48,13 +48,16 @@ releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich. 
 
 
-  Bug fixes include:
+  Welcome to version v1.107 of Immich. This release includes many bug fixes, new translations from many new languages, and enhancements to the recent new features in the last release, as well as a change in the default timeline display on the mobile app. Check out some of the highlights below:
+  
+  
+  - Enhancement to deduplication UI - bulk resolve duplicates, view duplicates in fullscreen.
 
-  - Slow loading on the people page on the web
-
-  - Incorrect translation strings
-
-  - Fixed an issue of able to merge the same person into one
+  - Display all local assets on the mobile timeline by default.
+  
+  - Custom request headers for the mobile app.
+  
+  - Facial recognition now recognizes more faces.
 
 
   Full release notes are found at https://github.com/immich-app/immich/releases
