Update Immich to v1.107.2 (#1184)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.106.4"
+version: "v1.107.2"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -48,25 +48,16 @@ releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich. 
 
 
-  This release is packed with many new features, improvements, and bug fixes. Highlights include:
+  Welcome to version v1.107 of Immich. This release includes many bug fixes, new translations from many new languages, and enhancements to the recent new features in the last release, as well as a change in the default timeline display on the mobile app. Check out some of the highlights below:
+  
+  
+  - Enhancement to deduplication UI - bulk resolve duplicates, view duplicates in fullscreen.
 
-  - Removal of the immich-microservices container
-
-  - Similar image detection and management
-
-  - End-to-end acceleration for NVENC and QSV transcoding
-
-  - Better video thumbnails
-
-  - Email notifications for album events
-
-  - Per user email notifications settings
-
-  - Send a test email when configuring the SMTP email server
-
-  - Public roadmap: https://immich.app/roadmap/
-
-  - Translation on the web
+  - Display all local assets on the mobile timeline by default.
+  
+  - Custom request headers for the mobile app.
+  
+  - Facial recognition now recognizes more faces.
 
 
   Full release notes are found at https://github.com/immich-app/immich/releases
