--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: maybe
 category: finance
 name: Maybe
-version: 'v0.1.0-alpha.8'
+version: 'v0.1.0-alpha.9'
 tagline: The OS for your personal finances
 description: >-
   Maybe is a fully (your finances are secure) open-source OS for your personal finances built by
@@ -21,7 +21,16 @@ description: >-
   1. Sign up for a Synth API key at https://synthfinance.com/
 
   2. Add your Synth API key to the .env file at ~/umbrel/app-data/maybe/.env
-releaseNotes: ""
+releaseNotes: >-
+  - Fixed decimal display for Euro currencies.
+  - Ability to edit transaction types and amounts.
+  - Fixed transactions being duplicated during import.
+  - Improved balance consistency after entering transactions.
+  - Improved account sychronization with one click.
+  - Enhanced button design for a more unified look.
+  - Improved account settings and transaction updates.
+  - Fixed several bugs to make the app run smoother.
+  - Toast notifications can now be closed on demand.
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
