--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -22,6 +22,8 @@ description: >-
 
   2. Add your Synth API key to the .env file at ~/umbrel/app-data/maybe/.env
 releaseNotes: >-
+  Improvements in this release:
+
   - Fixed decimal display for Euro currencies.
   - Ability to edit transaction types and amounts.
   - Fixed transactions being duplicated during import.
@@ -31,6 +33,11 @@ releaseNotes: >-
   - Improved account settings and transaction updates.
   - Fixed several bugs to make the app run smoother.
   - Toast notifications can now be closed on demand.
+
+  Full release notes available at:
+
+  - https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.8
+  - https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.9
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
