--- a/qbittorrent/umbrel-app.yml
+++ b/qbittorrent/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: qbittorrent
 category: networking
 name: qBittorrent
-version: "4.6.5-hotfix"
+version: "4.6.5-autoconfigure"
 tagline: Free and reliable P2P Bittorrent client
 description: >-
   qBittorrent is an open-source software alternative to µTorrent. It's designed to meet the needs of most users while using as little CPU and memory as possible.
@@ -10,23 +10,29 @@ description: >-
   
   🛠️ SET-UP INSTRUCTIONS
 
-  - qBittorrent on umbrelOS is configured to work without any additional configuration. Please make sure that you do not change the default download path in the app settings. It should remain set to "/app/qBittorrent/downloads" to ensure that your downloads show up in your main Umbrel downloads folder.
 
-  - This app comes bundled with VueTorrent, a sleek user interface that provides an alternative to qBittorrent's default interface.
-  To enable VueTorrent, simply navigate to tools --> options --> Web UI and select "Use alternative Web UI".
+  qBittorrent on umbrelOS is set up to work without any additional configuration needed. It will automatically be connected to dependent apps like Radarr, Sonarr, Lidarr, Readarr, and Prowlarr. Simply install additional media apps from the Umbrel App Store, and everything will work seamlessly together.
+
+
+  Some additional tips:
+
+
+  - Please make sure that you do not change the default download path in the app settings. It should remain set to "/app/qBittorrent/downloads" to ensure that your downloads show up in your main Umbrel downloads folder.
 
   - It is recommended to change the default password for the app after installation.
+
+  - This app comes bundled with two alternative Web UI's: VueTorrent and Nightwalker. To enable them, navigate to tools --> options --> Web UI and select "Use alternative Web UI". In the "Files location" field, enter "/app/vuetorrent" for VueTorrent or "/app/nightwalker" for Nightwalker and then click "Save". 
   
 
   ⚠️ qBittorrent downloads torrents over the Clearnet, not Tor.
 releaseNotes: >-
-  This hotfix release addresses an issue where users who installed qBittorrent v4.6.5 on umbrelOS sometimes needed to restart the app to access the web interface.
+  qBittorrent on umbrelOS now offers automatic configuration for media apps like Radarr, Sonarr, Lidarr, Readarr, and Prowlarr. Simply install your preferred media apps from the Umbrel App Store, and the rest will be handled for you. No manual configuration required!
 
 
-  ⚠️ After updating, please ensure that your downloads path in the app is set to the default "/app/qBittorrent/downloads" path. This will make it so that your downloads show up in your main Umbrel downloads folder.
+  Please update your media apps to the latest versions to take advantage of this feature. If you have previously set up qBittorrent with media apps, this update will not affect your existing settings.
   
   
-  Read the full release notes at https://www.qbittorrent.org/news#sun-may-26th-2024---qbittorrent-v4.6.5-release
+  Full release notes for qBittorrent are available at https://www.qbittorrent.org/news#sun-may-26th-2024---qbittorrent-v4.6.5-release
 developer: qBittorrent
 website: https://qbittorrent.org/
 dependencies: []
