--- a/radarr/umbrel-app.yml
+++ b/radarr/umbrel-app.yml
@@ -2,10 +2,19 @@ manifestVersion: 1.1
 id: radarr
 category: media
 name: Radarr
-version: "5.6.0"
+version: "5.7.0"
 tagline: Your movie collection manager
 description: >-
   Radarr is a movie collection manager for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new movies and will interface with clients and indexers to grab, sort, and rename them. It can also be configured to automatically upgrade the quality of existing files in the library when a better quality format becomes available. Note that only one type of a given movie is supported. If you want both an 4k version and 1080p version of a given movie you will need multiple instances.
+
+
+  🛠️ SETUP INSTRUCTIONS
+
+  Radarr on umbrelOS will automatically connect to download clients installed from the Umbrel App Store. Choose from Transmission, qBittorerent, and SABnzbd. Simply install your preferred client(s).
+
+
+  All you need to do from there is add an indexer so Radarr can search for movies. You can add indexers directly within Radarr, or install Prowlarr from the Umbrel App Store for easier management of indexers across multiple apps.
+  Add your indexers to Prowlarr and they will be automatically available in Radarr.
 developer: Radarr
 website: https://radarr.video/
 dependencies:
@@ -19,10 +28,15 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This release updates Radarr from 5.0.3 to 5.6.0.
+  Radarr on umbrelOS now offers automatic configuration for qBittorrent and SABnzbd!
 
 
-  Full release notes here https://github.com/Radarr/Radarr/releases
+  - Simply install your preferred download client from the Umbrel App Store, and Radarr will handle the rest. No manual configuration required! If you currently have qBittorrent or SABnzbd installed, please update to the latest versions to take advantage of this feature.
+  
+  - Already configured? If you have previously set up Radarr with qBittorrent or SABnzbd, this update will not affect your existing settings.
+
+
+  Full release notes for Radarr are available at https://github.com/Radarr/Radarr/releases
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
