--- a/sonarr/umbrel-app.yml
+++ b/sonarr/umbrel-app.yml
@@ -2,10 +2,19 @@ manifestVersion: 1.1
 id: sonarr
 category: media
 name: Sonarr
-version: "4.0.5"
+version: "4.0.6"
 tagline: Smart PVR for newsgroup and bittorrent users
 description: >-
   Sonarr is a PVR for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new episodes of your favorite shows and will grab, sort and rename them. It can also be configured to automatically upgrade the quality of files already downloaded when a better quality format becomes available.
+
+
+  🛠️ SETUP INSTRUCTIONS
+
+  Sonarr on umbrelOS will automatically connect to download clients installed from the Umbrel App Store. Choose from Transmission, qBittorerent, and SABnzbd. Simply install your preferred client(s).
+
+
+  All you need to do from there is add an indexer so Sonarr can search for shows. You can add indexers directly within Sonarr, or install Prowlarr from the Umbrel App Store for easier management of indexers across multiple apps.
+  Add your indexers to Prowlarr and they will be automatically available in Sonarr.
 developer: Sonarr
 website: https://sonarr.tv/
 dependencies:
@@ -19,13 +28,15 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This release updates Sonarr from 3.0.10 to 4.0.5. The official Sonarr v4 announcement can be found at https://forums.sonarr.tv/t/sonarr-v4-released/33089.
+  Sonarr on umbrelOS now offers automatic configuration for qBittorrent and SABnzbd!
 
 
-  🚨 You will be required to set-up a login for Sonarr with this update.
+  - Simply install your preferred download client from the Umbrel App Store, and Sonarr will handle the rest. No manual configuration required! If you currently have qBittorrent or SABnzbd installed, please update to the latest versions to take advantage of this feature.
+  
+  - Already configured? If you have previously set up Sonarr with qBittorrent or SABnzbd, this update will not affect your existing settings.
 
 
-  Full release notes can be found at https://github.com/Sonarr/Sonarr/releases
+  Full release notes for Sonarr can be found at https://github.com/Sonarr/Sonarr/releases
 defaultUsername: ""
 defaultPassword: ""
 torOnly: false
