--- a/readarr/umbrel-app.yml
+++ b/readarr/umbrel-app.yml
@@ -2,10 +2,22 @@ manifestVersion: 1.1
 id: readarr
 category: media
 name: Readarr
-version: "0.3.16"
+version: "0.3.30"
 tagline: Your book collection manager
 description: >-
+  ⚠️ Readarr is currently in beta testing and is generally still in a work in progress. Features may be broken, incomplete, or cause spontaneous combustion.
+
+
   Readarr is an ebook and audiobook collection manager for Usenet and BitTorrent users. It can monitor multiple RSS feeds for new books from your favorite authors and will grab, sort, and rename them. Note that only one type of a given book is supported. If you want both an audiobook and ebook of a given book you will need multiple instances.
+
+
+  🛠️ SETUP INSTRUCTIONS
+
+  Readarr on umbrelOS will automatically connect to download clients installed from the Umbrel App Store. Choose from Transmission, qBittorerent, and SABnzbd. Simply install your preferred client(s).
+
+
+  All you need to do from there is add an indexer so Readarr can search for books. You can add indexers directly within Readarr, or install Prowlarr from the Umbrel App Store for easier management of indexers across multiple apps.
+  Add your indexers to Prowlarr and they will be automatically available in Readarr.
 developer: Readarr
 website: https://readarr.com/
 dependencies:
@@ -25,4 +37,10 @@ permissions:
   - STORAGE_DOWNLOADS
 submitter: Choff3
 submission: https://github.com/getumbrel/umbrel-apps/pull/712
-releaseNotes: ""
+releaseNotes: >-
+  Readarr on umbrelOS now offers automatic configuration for qBittorrent and SABnzbd!
+
+
+  - Simply install your preferred download client from the Umbrel App Store, and Readarr will handle the rest. No manual configuration required! If you currently have qBittorrent or SABnzbd installed, please update to the latest versions to take advantage of this feature.
+  
+  - Already configured? If you have previously set up Readarr with qBittorrent or SABnzbd, this update will not affect your existing settings.
