--- a/prowlarr/umbrel-app.yml
+++ b/prowlarr/umbrel-app.yml
@@ -2,10 +2,26 @@ manifestVersion: 1
 id: prowlarr
 category: media
 name: Prowlarr
-version: "1.18.0"
+version: "1.20.1"
 tagline: Prowlarr is an indexer manager/proxy
 description: >-
-  Prowlarr is an indexer manager/proxy built on the popular *arr .net/reactjs base stack to integrate with your various PVR apps. Prowlarr supports management of both Torrent Trackers and Usenet Indexers. It integrates seamlessly with Lidarr, Mylar3, Radarr, Readarr, and Sonarr offering complete management of your indexers with no per app Indexer setup required (we do it all).
+  Prowlarr is an indexer manager/proxy built on the popular *arr .net/reactjs base stack to integrate with your various PVR apps.
+  Prowlarr supports management of both Torrent Trackers and Usenet Indexers. It integrates seamlessly with Lidarr, Mylar3, Radarr, Readarr, and Sonarr offering complete management of your indexers with no per app Indexer setup required (we do it all).
+
+
+  🛠️ SETUP INSTRUCTIONS
+
+
+  Prowlarr on umbrelOS will automatically:
+
+  1.	Connect to Other Servarr Apps and Download Clients:
+  
+  Prowlarr will seamlessly integrate with other Servarr apps (e.g., Radarr, Sonarr, etc.) and download clients (e.g., Transmission, qBittorrent, etc.) installed from the Umbrel App Store. Simply install your preferred apps, and Prowlarr will handle the connections for you.
+
+
+  2. Set up Flaresolverr:
+  
+  Prowlarr comes pre-configured with FlareSolverr. To use it, simply add the “flaresolverr” tag to any indexers that require it.
 developer: Prowlarr
 website: https://prowlarr.com/
 dependencies:
@@ -21,9 +37,14 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update takes Prowlarr from 1.12.2 to 1.18.0.
+  Prowlarr on umbrelOS now:
+  
+  - Automatically connects to more download clients (qBittorrent and SABnzbd) installed from the Umbrel App Store. Simply install your preferred download client from the Umbrel App Store, and Prowlarr will handle the rest. No manual configuration required! If you currently have qBittorrent or SABnzbd installed, please update to the latest versions to take advantage of this feature. If you have previously set up Prowlarr with qBittorrent or SABnzbd, this update will not affect your existing settings.
 
-  Full release notes here: https://github.com/Prowlarr/Prowlarr/releases
+  - Comes pre-configured with FlareSolverr. To use it, simply add the “flaresolverr” tag to any indexers that require it.
+
+
+  Full release notes for Prowlarr are available at https://github.com/Prowlarr/Prowlarr/releases
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
