Tweak SABnzbd release notes

--- a/sabnzbd/umbrel-app.yml
+++ b/sabnzbd/umbrel-app.yml
@@ -33,8 +33,8 @@ releaseNotes: >-
   SABnzbd on umbrelOS now offers automatic configuration for media apps like Radarr, Sonarr, Lidarr, Readarr, and Prowlarr. Simply install your preferred media apps from the Umbrel App Store, and the rest will be handled for you. No manual configuration required!
 
 
-  Please update your media apps to the latest versions to take advantage of this feature. If you have previously set up qBittorrent with media apps, this update will not affect your existing settings.
-  If you have not previously set up SABnzbd with media apps it is recommended that you uninstall and reinstall SABnzbd to take advantage of this feature.
+  Please update your media apps to the latest versions to take advantage of this feature. If you have previously set up SABnzbd as a download client within media apps, this update will not affect your existing settings.
+  If you have not previously set up SABnzbd with media apps, it is recommended that you uninstall and reinstall SABnzbd to avoid any potential category conflicts.
 
 
   Full release notes for SABnzbd are available at https://github.com/sabnzbd/sabnzbd/releases
