Dynamically set BLOCK_EXPLORER_URL based on Bitcoin Node network

--- a/core-lightning-rtl/docker-compose.yml
+++ b/core-lightning-rtl/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       RUNE_PATH: "/root/.lightning/.commando-env"
       RTL_CONFIG_PATH: "/data"
       RTL_COOKIE_PATH: "/data/.cookie"
-      BLOCK_EXPLORER_URL: "https://mempool.space"
+      BLOCK_EXPLORER_URL: "${APP_CORE_RTL_BLOCK_EXPLORER_URL}"
     volumes:
       - "${APP_DATA_DIR}/data/rtl:/data"
       - "${CORE_LIGHTNING_PATH}:/root/.lightning"
