Change host bind mount for core lightning data dir

--- a/core-lightning-rtl/docker-compose.yml
+++ b/core-lightning-rtl/docker-compose.yml
@@ -21,4 +21,4 @@ services:
       BLOCK_EXPLORER_URL: "${APP_CORE_RTL_BLOCK_EXPLORER_URL}"
     volumes:
       - "${APP_DATA_DIR}/data/rtl:/data"
-      - "${CORE_LIGHTNING_PATH}:/root/.lightning"
+      - "${APP_CORE_LIGHTNING_DATA_DIR}:/root/.lightning:ro"
