Add compatibility warning to RTL_CLN release notes

--- a/core-lightning-rtl/umbrel-app.yml
+++ b/core-lightning-rtl/umbrel-app.yml
@@ -44,6 +44,10 @@ gallery:
 path: ""
 deterministicPassword: true
 releaseNotes: >-
+  ⚠️ This version of Ride The Lightning is compatible with Core Lightning v24.05 and above. Please update the Core Lightning app to the latest version in the Umbrel App Store before updating Ride The Lightning. 
+  If you have already updated Ride The Lightning, then simply restart the Ride The Lightning app after updating Core Lightning to the latest version. 
+
+
   - Integration with mempool.space api to display prevailing fee rates on various channel open/close modals
 
   - Links enabled for viewing transactions on mempool.space from modals of on-chain transactions and channel info
