Add RTL compatibility note to CLN release notes

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -32,7 +32,7 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  This updates lightningd to v24.05.
+  This updates lightningd to v24.05. If you are running the Ride The Lightning app, please update it to the latest version in the Umbrel App Store after updating Core Lightning to maintain compatibility.
 
 
   lightningd v24.05:
