--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: core-lightning
 category: bitcoin
 name: Core Lightning
-version: "24.02.2"
+version: "24.05"
 tagline: Run your personal Core Lightning node
 description: >-
   Get started with the Lightning network today with Core Lightning - a
@@ -32,84 +32,24 @@ defaultPassword: ""
 submitter: Blockstream
 submission: https://github.com/getumbrel/umbrel-apps/pull/475
 releaseNotes: >-
-  This updates cln-application to v0.0.5, and lightningd to v24.02.2.
+  This updates lightningd to v24.05. If you are running the Ride The Lightning app, please update it to the latest version in the Umbrel App Store after updating Core Lightning to maintain compatibility.
 
 
-  cln-application:
-
-  - bug fix for opening channel
-
-  - fixed message on the empty transactions channel card
-
-  - bug fix for RC version compatibility check
-
-  - added gRPC options on connect wallet
-
-  - listpeers no longer returns channel, updated the endpoint to listpeerchannels
-
-
-  Full cln-application release notes are available at https://github.com/ElementsProject/cln-application/releases/tag/v0.0.4
-
-
-  c-lightning-REST v0.10.5:
-
-  - plugin.js renamed to clrest.js (required for reckless plugin manager)
+  lightningd v24.05:
   
-  - allow an option to specify an IP address to bind with the server
+  -	New rune restrictions can now be applied to invoices with the pinv restriction.
+  
+  -	Stability fixes to gossip and anchor channel spends.
 
-  - bug fix for error on generating new certificates
+  -	Increased file descriptor limits for large nodes.
 
-  - bug fix for websocket notifications
+  -	Pruned node operation is better supported by bcli with more robust block fetching.
 
-  - setchannelfee rpc has been replaced by setchannel (no impact to the developers as REST API signature remains unchanged)
+  -	Pay can now pay part of an invoice with the partial_msat parameter. Get someone else to pay the remainder.
 
-  - fixed the issue of server failing to initialize if IPV6 is disabled
+  -	Check can now be used to validate setconfig settings and values. It can also check for approval by the hsmd of keysend payments.
 
-  - pay api updated with the latest params
-
-  - the msat purge
-
-  - new API endpoint for listpeerchannels rpc
-
-  - issue in the remote balance calculation fixed
-
-  - issue in the pending balance calculation fixed
-
-  - version compatibility check to address BTCPayserver forked version
-
-  - all available filtering options (invoice, payment hash & offer) for listInvoices api
-
-  - all CLN filtering options (payment hash & status) for listPays and listPayments apis
-
-
-  Full c-lightning-REST release notes are available at https://github.com/Ride-The-Lightning/c-lightning-REST/releases
-
-
-  lightningd v24.02.2:
-
-  - pay route algorithm doesn't bias against our own "expensive" channels any more
-
-  - pay route algorithm fixed and refined to balance fees and capacity far better
-
-  - prevents repeating the preapproveinvoice check
-
-  - gossip feature bit deprecation for LDK compatibility fix
-
-  - renepay bugfix with situation htlcmax=htlcmin
-
-  - recover plugin can now detect dataloss and guide you through the recovery process, making emergency recoveries less stressful
-
-  - logic of the anchor channels has been overhauled and channel fundings and closing should now be more flexible and reliable
-
-  - dual-funding has been merged into the Lightning Specification! This is a major milestone for more efficient channel management
-
-  - gossip_store file can now be shared with others, since it no longer contains local unpublished gossip
-
-  - optimizations in the way we process blocks means that we can sync with the blockchain 50% faster than before
-
-  - new --no-reconnect-private flag, which tells lightningd not to reconnect private peers. This is useful for service-providers and LSPs if the majority of peers is flaky
-
-  - newest version of the splicing proposal was implemented
+  -	Offers will now make an outgoing connection if necessary to reply to an invoice request.
 
 
   Full lightningd release notes are available at https://github.com/ElementsProject/lightning/releases
