Update PeerSwap to v1.6.3 (#1190)

--- a/peerswap/umbrel-app.yml
+++ b/peerswap/umbrel-app.yml
@@ -2,9 +2,9 @@ manifestVersion: 1
 id: peerswap
 category: bitcoin
 name: PeerSwap
-version: "1.5.7"
+version: "1.6.3"
 tagline: Balance your lightning channels with Liquid BTC
-description: PeerSwap enables Lightning Network nodes to balance their channels by facilitating atomic swaps with direct peers. PeerSwap enhances decentralization of the Lightning Network by enabling all nodes to be their own swap provider. No centralized coordinator, no 3rd party rent collector, and lowest cost channel balancing means small nodes can better compete with large nodes. Includes Liquid Peg-in functionality.
+description: PeerSwap enables Lightning Network nodes to balance their channels by facilitating atomic swaps with direct peers. PeerSwap enhances decentralization of the Lightning Network by enabling all nodes to be their own swap provider. No centralized coordinator, no 3rd party rent collector, and lowest cost channel balancing means small nodes can better compete with large nodes. Includes channel AutoFees, Liquid Peg-in and BTC send with coin select + fee bump functionality.
 developer: PeerSwap Project
 website: https://peerswap.dev
 dependencies:
@@ -21,4 +21,4 @@ path: ""
 submitter: Impa10r
 submission: https://github.com/getumbrel/umbrel-apps/pull/932
 releaseNotes: >-
-  Adds channel Auto Fee functionality. See full changelog here: https://github.com/Impa10r/peerswap-web/blob/main/CHANGELOG.md
+  Simplifies New Swap interface, adds BTC send with coin select, bug fixes. See full changelog here: https://github.com/Impa10r/peerswap-web/blob/main/CHANGELOG.md
