Add whitespace to release notes

--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -23,21 +23,28 @@ description: >-
   2. Add your Synth API key to the .env file at ~/umbrel/app-data/maybe/.env
 releaseNotes: >-
   Improvements in this release:
+  
 
   - Fixed decimal display for Euro currencies.
+
   - Ability to edit transaction types and amounts.
+
   - Fixed transactions being duplicated during import.
+
   - Improved balance consistency after entering transactions.
+
   - Improved account sychronization with one click.
+
   - Enhanced button design for a more unified look.
+
   - Improved account settings and transaction updates.
+
   - Fixed several bugs to make the app run smoother.
+
   - Toast notifications can now be closed on demand.
 
-  Full release notes available at:
 
-  - https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.8
-  - https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.9
+  Full release notes available at https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.9
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
