Update release notes

--- a/chatpad-ai/umbrel-app.yml
+++ b/chatpad-ai/umbrel-app.yml
@@ -24,6 +24,6 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This release adds support for multiple languages, and includes many performance improvements and bug fixes.
+  This release adds GPT-4o support.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/604
