temporarily disable TeamSpeak

--- a/teamspeak/umbrel-app.yml
+++ b/teamspeak/umbrel-app.yml
@@ -6,6 +6,9 @@ category: social
 version: "3.13.7"
 port: 50371
 description: >-
+  ⚠️ This app has been temporarily removed from the Umbrel App Store while we work on a solution for running TeamSpeak on arm64 devices. Existing installs will continue to work as normal. TeamSpeak will be back soon!
+
+
   Use crystal clear sound to communicate with your team mates cross-platform with military-grade security, lag-free performance &
   unparalleled reliability and uptime.
   
@@ -80,3 +83,4 @@ dependencies: []
 path: ""
 defaultUsername: serveradmin
 deterministicPassword: true
+disabled: true
