Add submission link

--- a/3x-ui/umbrel-app.yml
+++ b/3x-ui/umbrel-app.yml
@@ -41,7 +41,7 @@ dependencies: []
 developer: MHSanaei
 website: https://github.com/MHSanaei/3x-ui
 submitter: pimushkin
-submission: 
+submission: https://github.com/getumbrel/umbrel-apps/pull/1201
 repo: https://github.com/MHSanaei/3x-ui
 support: https://github.com/MHSanaei/3x-ui/blob/main/README.md
 gallery:
