Update Immich to v1.108.0

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.107.2"
+version: "v1.108.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -45,19 +45,18 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
-  ⚠️ As usual, please check that your mobile app is compatible with this release of Immich. 
+  ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
 
 
-  Welcome to version v1.107 of Immich. This release includes many bug fixes, new translations from many new languages, and enhancements to the recent new features in the last release, as well as a change in the default timeline display on the mobile app. Check out some of the highlights below:
-  
-  
-  - Enhancement to deduplication UI - bulk resolve duplicates, view duplicates in fullscreen.
+  🚨 This release includes a security update for Node.js. While we don't think these CVEs affect Immich, we strongly recommend you update. For more details, see https://nodejs.org/en/blog/vulnerability/july-2024-security-releases.
 
-  - Display all local assets on the mobile timeline by default.
-  
-  - Custom request headers for the mobile app.
-  
-  - Facial recognition now recognizes more faces.
+
+  Welcome to release `v1.108.0` of Immich. This release focuses on bug fixes and improvements across the app. We added a fun section of things we learned when working on Immich. You can take a look here at the [Cursed Knowledge](https://immich.app/cursed-knowledge) page. Some of the highlights in this release include:
+
+
+  - Notable fix: Use Redis for Websocket state tracking to allow HDD to spin down when inactive
+
+  - Using queue to improve CLI processing
 
 
   Full release notes are found at https://github.com/immich-app/immich/releases
