--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: adguard-home
 category: networking
 name: AdGuard Home
-version: "0.107.48"
+version: "0.107.52"
 tagline: Network-wide software for blocking ads and tracking
 description: >-
   ⚠️ See below for important set-up instructions.
@@ -18,7 +18,26 @@ description: >-
   In the setup wizard, it is important to set the "Port" of the Admin Web Interface to 8095.
   This ensures that the app will not conflict with other apps from the Umbrel App Store, and that the app will be accessible
   when clicking on the app icon in the umbrelOS homescreen.
-releaseNotes: ""
+releaseNotes: >-
+  In this release we have fixed a number of bugs, migrated our front-end to TypeScript and updated our front-end libraries to improve the quality of development and your user experience.
+
+  
+  🚨 Security: Go version has been updated to prevent the possibility of exploiting the Go vulnerabilities fixed in Go 1.22.5.
+
+  
+  Added: The ability to disable logging using the new `log.enabled` configuration property.
+
+  
+  Changed: Frontend rewritten in TypeScript.
+
+  
+  Deprecated: Node 18 support, Node 20 will be required in future releases.
+
+  
+  Fixed: Panic caused by missing user-specific blocked services object in configuration file.
+
+  
+  Fixed: Tracking `/etc/hosts` file changes causing panics within particular filesystems on start.
 developer: Adguard
 website: https://adguard.com/fr/adguard-home/overview.html
 dependencies: []
