Tweak release notes

--- a/adguard-home/umbrel-app.yml
+++ b/adguard-home/umbrel-app.yml
@@ -21,23 +21,8 @@ description: >-
 releaseNotes: >-
   In this release we have fixed a number of bugs, migrated our front-end to TypeScript and updated our front-end libraries to improve the quality of development and your user experience.
 
-  
-  🚨 Security: Go version has been updated to prevent the possibility of exploiting the Go vulnerabilities fixed in Go 1.22.5.
 
-  
-  Added: The ability to disable logging using the new `log.enabled` configuration property.
-
-  
-  Changed: Frontend rewritten in TypeScript.
-
-  
-  Deprecated: Node 18 support, Node 20 will be required in future releases.
-
-  
-  Fixed: Panic caused by missing user-specific blocked services object in configuration file.
-
-  
-  Fixed: Tracking `/etc/hosts` file changes causing panics within particular filesystems on start.
+  Full release notes can be found at https://github.com/AdguardTeam/AdGuardHome/releases
 developer: Adguard
 website: https://adguard.com/fr/adguard-home/overview.html
 dependencies: []
