Tweak release notes grammar

--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -39,7 +39,7 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >
-  This release updates Uptime Kuma from version 1.23.12 to 1.23.13 and bug fixes.
+  This release updates Uptime Kuma from version 1.23.12 to 1.23.13 and includes the following bug fixes:
 
   - Fixed language setting issues: Localisation-matching algorithm missing some edgecase
 
