Update maybe to v0.1.0-alpha.11

--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: maybe
 category: finance
 name: Maybe
-version: 'v0.1.0-alpha.9'
+version: 'v0.1.0-alpha.11'
 tagline: The OS for your personal finances
 description: >-
   Maybe is a fully (your finances are secure) open-source OS for your personal finances built by
@@ -23,28 +23,25 @@ description: >-
   2. Add your Synth API key to the .env file at ~/umbrel/app-data/maybe/.env
 releaseNotes: >-
   Improvements in this release:
-  
-
-  - Fixed decimal display for Euro currencies.
-
-  - Ability to edit transaction types and amounts.
-
-  - Fixed transactions being duplicated during import.
-
-  - Improved balance consistency after entering transactions.
-
-  - Improved account sychronization with one click.
-
-  - Enhanced button design for a more unified look.
-
-  - Improved account settings and transaction updates.
-
-  - Fixed several bugs to make the app run smoother.
-
-  - Toast notifications can now be closed on demand.
 
 
-  Full release notes available at https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.9
+  - Additional error handling.
+
+  - Fallback for missing exchange rates.
+
+  - Easier balance editing.
+
+  - Ability to upload CSV when importing transactions.
+
+  - Use preferred currency as default when creating new accounts.
+
+  - Improvements to account synchronization.
+
+  - Added links to troubleshooting guides.
+
+
+
+  Full release notes available at https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.11
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
