Ignore Proxy auth for usage with apps
Without this line, no mobile app can recognize the mobile app

--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: paperless_webserver_1
       APP_PORT: 8000
+      PROXY_AUTH_ADD: 'false'
 
   broker:
     image: docker.io/library/redis:7@sha256:d6ecc832969a4827645a083da38345327b3447772fe907e7d4311c79b4e3a06e
