Element update to 1.11.71

--- a/element/docker-compose.yml
+++ b/element/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: 80
 
   web:
-    image: getumbrel/element-web:v1.8.4@sha256:16b2776278a8a9d8a2397ccd75484f8728fd3223cb3329bf572b50b8f950636c
+    image: vectorim/element-web:v1.11.71@sha256:36b79b6113324b1977c71a643fbf86a00959c770a8413c8808ac5c66b74c2a7d
     # NGINX parent container requires root
     # user: "1000:1000"
     restart: on-failure
