--- a/vikunja/docker-compose.yml
+++ b/vikunja/docker-compose.yml
@@ -3,13 +3,13 @@ version: "3.7"
 services:
   app_proxy:
     environment:
-      APP_HOST: vikunja_proxy_1
-      APP_PORT: 80
+      APP_HOST: vikunja_web_1
+      APP_PORT: 3456
       # vikunja has its own auth, so we don't need to use transparent umbrel auth here
       PROXY_AUTH_ADD: "false"
 
   db:
-    image: mariadb:10.11.6@sha256:20a8bd91d972c97cffded88f2ba0ab533c8988b2dc08090c57d50caf7114ed20
+    image: mariadb:10.11.8@sha256:75f6e61397758489d1dccf95db33b6b49ebfc7ec1253d40060fdf8ceb7f938a3
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
       MYSQL_ROOT_PASSWORD: supersecret
@@ -19,9 +19,13 @@ services:
     volumes:
       - ${APP_DATA_DIR}/data/db:/var/lib/mysql
     restart: on-failure
+    healthcheck:
+      test: ["CMD-SHELL", "mysqladmin ping -h localhost -u $$MYSQL_USER --password=$$MYSQL_PASSWORD"]
+      interval: 2s
+      start_period: 30s
 
-  api:
-    image: vikunja/api:0.22.1@sha256:c9415431e6235229302bb8f9ee6660b74c24859d1e8adbc4a3e25bd418604b57
+  web:
+    image: vikunja/vikunja:0.24.1@sha256:acf323bc5ba298a9a1b3594bbbd07a036fe39f347850e8b8c05d641fb08c7003
     environment:
       VIKUNJA_DATABASE_HOST: vikunja_db_1
       VIKUNJA_DATABASE_PASSWORD: secret
@@ -32,19 +36,8 @@ services:
       VIKUNJA_SERVICE_FRONTENDURL: http://${DEVICE_DOMAIN_NAME}/
     volumes: 
       - ${APP_DATA_DIR}/data/files:/app/vikunja/files
+    ports:
+      - 3456:3456
     depends_on:
       - db
-    restart: on-failure
-
-  frontend:
-    image: vikunja/frontend:0.22.1@sha256:f0223d441997fe29c377d0b476dc4bb2fc091b44b9c24d76b1b88c213df520c5
-    restart: on-failure
-
-  proxy:
-    image: nginx:1.25.3@sha256:4c0fdaa8b6341bfdeca5f18f7837462c80cff90527ee35ef185571e1c327beac
-    volumes:
-      - ${APP_DATA_DIR}/data/proxy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - api
-      - frontend
     restart: on-failure
