--- a/vikunja/umbrel-app.yml
+++ b/vikunja/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: vikunja
 category: files
 name: Vikunja
-version: "0.22.1"
+version: "0.24.1"
 tagline: The open-source, self-hostable to-do app
 description: >-
   Think of Vikunja like the notebook you have with all your things to keep track of. But with superpowers.
@@ -22,7 +22,7 @@ description: >-
 
   You can view your tasks in the classic list view - or in a Gantt Chart, or Table view, or Kanban Board. Whatever you need!
 releaseNotes:
-  This is a patch release with many small bug fixes and improvements. Full release notes are available at https://vikunja.io/blog/2024/01/vikunja-frontend-and-api-v0.22.1-was-released/
+  This is a patch release with many small bug fixes and improvements. Full release notes are available at https://vikunja.io/changelog/vikunja-v0.24.1-was-released
 developer: Vikunja
 website: https://vikunja.io/
 dependencies: []
