--- a/navidrome/docker-compose.yml
+++ b/navidrome/docker-compose.yml
@@ -1,10 +1,12 @@
 services:
-  server:
+  navidrome:
     image: deluan/navidrome:latest
     restart: on-failure
     environment:
       - PUID=1000
       - PGID=1000
+    ports:
+      - "4533:4533"
     volumes:
       - ${APP_DATA_DIR}/data:/data
       - ${UMBREL_ROOT}/data/storage/music:/music:rw
