--- a/navidrome/umbrel-app.yml
+++ b/navidrome/umbrel-app.yml
@@ -5,11 +5,41 @@ name: Navidrome
 version: "0.52.5"
 tagline: 🎧 ☁️ Modern Music Server and Streamer compatible with Subsonic/Airsonic
 description: >-
+  Your Personal Streaming Service
   Navidrome is an open source web-based music collection server and streamer.
   It gives you freedom to listen to your music collection from any browser or mobile device. It's like your personal Spotify!
-developer: Deluan
+
+  Features:
+
+  - Handles very large music collections
+
+  - Streams virtually any audio format available
+
+  - Reads and uses all your beautifully curated metadata
+
+  - Great support for compilations (Various Artists albums) and box sets (multi-disc albums)
+
+  - Multi-user, each user has their own play counts, playlists, favourites, etc...
+
+  - Very low resource usage
+
+  - Multi-platform, runs on macOS, Linux and Windows. Docker images are also provided
+
+  - Ready to use binaries for all major platforms, including Raspberry Pi
+
+  - Automatically monitors your library for changes, importing new files and reloading new metadata
+
+  - Themeable, modern and responsive Web interface based on Material UI
+
+  - Compatible with all Subsonic/Madsonic/Airsonic clients
+
+  - Transcoding on the fly. Can be set per user/player. Opus encoding is supported
+
+  - Translated to various languages
+
+developer: Navidrome
 website: https://www.navidrome.org/
-dependencies:
+dependencies: []
 repo: https://github.com/navidrome/navidrome
 support: https://github.com/navidrome/navidrome/discussions
 port: 4533
@@ -20,5 +50,7 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
+releaseNotes: >-
+  
 submitter: owmsoton
 submission:
