--- a/navidrome/umbrel-app.yml
+++ b/navidrome/umbrel-app.yml
@@ -51,6 +51,6 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  
+  Full release notes are available at https://github.com/navidrome/navidrome/releases/tag/v0.52.5
 submitter: owmsoton
 submission:
