--- a/navidrome/umbrel-app.yml
+++ b/navidrome/umbrel-app.yml
@@ -51,6 +51,9 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
+
+  This is mostly a bug-fix version, with focus on some Jukebox issues, but also other general improvements and fixes.
+
   Full release notes are available at https://github.com/navidrome/navidrome/releases/tag/v0.52.5
 submitter: owmsoton
 submission:
