Add release notes

--- a/paperless/umbrel-app.yml
+++ b/paperless/umbrel-app.yml
@@ -22,7 +22,11 @@ description: >-
   - Supports PDF documents, images, plain text files, Office documents (Word, Excel, Powerpoint, and LibreOffice equivalents)1 and more.
 
   - Paperless stores your documents plain on disk. Filenames and folders are managed by paperless and their format can be configured freely with different configurations assigned to different documents.
-releaseNotes: ""
+releaseNotes: >-
+  This release updates Paperless-ngx from version to 2.7.2 to 2.11.0.
+
+
+  Full release notes are found at https://github.com/paperless-ngx/paperless-ngx/releases?page=1
 developer: Paperless-ngx Community
 website: https://docs.paperless-ngx.com/
 dependencies: []
