Update Paperless-ngx to 2.11.0 (#1223)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/paperless/docker-compose.yml
+++ b/paperless/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     environment:
       APP_HOST: paperless_webserver_1
       APP_PORT: 8000
+      PROXY_AUTH_ADD: 'false'
 
   broker:
     image: docker.io/library/redis:7@sha256:d6ecc832969a4827645a083da38345327b3447772fe907e7d4311c79b4e3a06e
@@ -23,7 +24,7 @@ services:
       POSTGRES_PASSWORD: paperless
 
   webserver:
-    image: ghcr.io/paperless-ngx/paperless-ngx:2.7.2@sha256:703c990a790dfd4d25fb56df3afec27b13cb0926a3818bf265edac9c71311647
+    image: ghcr.io/paperless-ngx/paperless-ngx:2.11.0@sha256:da0476cea301df8bc8d20739f0e76de1e77d91ad2c9170b45c803468dde19208
     restart: on-failure
     depends_on:
       - db
