Update Memos to 0.22.3 (#1231)
Co-authored-by: Malte Kiefer <malte.kiefer@mailbox.org>
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/memos/umbrel-app.yml
+++ b/memos/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: memos
 category: files
 name: Memos
-version: "0.22.0"
+version: "0.22.3"
 tagline: Easily capture and share your great thoughts
 description: >-
   A privacy-first, lightweight note-taking service.
@@ -17,7 +17,28 @@ description: >-
   - Customize and share your notes effortlessly. With our intuitive sharing features, you can easily collaborate and distribute your notes with others.
 
   - RESTful API for third-party services. Embrace the power of integration and unleash new possibilities with our RESTful API support.
-releaseNotes: ""
+releaseNotes: >-
+  New:
+
+  - Support editing memos directly in the inline editor instead of a dialog.
+
+  - Support displaying tags in a tree structure.
+
+
+  Enhancements:
+
+  - Tables now support rendering additional syntax
+  
+  - HTML elements rendering supported
+
+  - Added a setting to enable link previews(disabled by default)
+
+  - Access token will be correctly deleted upon logout
+
+  - Disabling user registration has been moved to startup options/environment variables
+
+  
+  Full release notes are available at https://github.com/usememos/memos/releases
 developer: Memos
 website: https://www.usememos.com/
 dependencies: []
