Add back in compatibility warning and intro

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,14 +45,18 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >-
+  ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
+
+  
+  Welcome to version v1.109 of Immich. This release introduces an additional way for you to support Immich financially as well as bug fixes for various issues. Some of the highlights in this release include:
 
   - Immich licenses (and https://buy.immich.app)
     
   - "My Immich" url forwarder (https://my.immich.app)
 
-  - Notable fix: Generate thumbnail for iOS18 HEIC
+  - Generate thumbnail for iOS18 HEIC
 
-  - Notable fix: Generate Motion Photos for Pixel 6, 7, and 8
+  - Generate Motion Photos for Pixel 6, 7, and 8
 
 
   Full release notes are found at https://github.com/immich-app/immich/releases
