--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: mempool
 category: bitcoin
 name: mempool
-version: "2.5.0"
+version: "2.5.0-w"
 tagline: Explore the full Bitcoin ecosystem
 description: >-
   Be your own explorer.
