Formatting for release notes

--- a/mempool/umbrel-app.yml
+++ b/mempool/umbrel-app.yml
@@ -15,7 +15,8 @@ description: >-
 releaseNotes: >-
   This update brings a brand new mempool widget, allowing you to see the recommended fees at a glance right from your umbrelOS home screen.
 
-  To add this new widget, right-click on the home screen and select "Edit widgets", or click on Widgets in the Dock.
+
+  To add this widget, right-click on your home screen and select "Edit widgets", or click on Widgets in the Dock.
 developer: Mempool Space K.K.
 website: https://mempool.space/about
 dependencies:
