Wrap mempool api url in quotes

--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -79,5 +79,5 @@ services:
   widget-server:
     image: getumbrel/umbrel-mempool-widget-server:v1.0.0@sha256:099846e613c7310deba842241477737babcdf78250fba6edf39d456712eeefc3
     environment:
-      - MEMPOOL_API_URL: http://$APP_MEMPOOL_IP:$APP_MEMPOOL_PORT/api/v1/fees/recommended
+      - MEMPOOL_API_URL: "http://$APP_MEMPOOL_IP:$APP_MEMPOOL_PORT/api/v1/fees/recommended"
     restart: on-failure
