Prepare for the mempool 3.0.0 release

--- a/mempool/docker-compose.yml
+++ b/mempool/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_MEMPOOL_PORT
       PROXY_AUTH_ADD: "false"
   web:
-    image: mempool/frontend:v2.5.0@sha256:559b4542fc414a28db69bbda143e6be1c404e3f1b637c9e6f30526c10f4c75a7
+    image: mempool/frontend:latest
     user: "1000:1000"
     init: true
     restart: on-failure
@@ -23,7 +23,7 @@ services:
       default:
         ipv4_address: $APP_MEMPOOL_IP
   api:
-    image: mempool/backend:v2.5.0@sha256:c58996a3bfd382cb782da5d93e4b8f65f9c02c7a6bb10df4dda0bdf52ba8ed88
+    image: mempool/backend:latest
     user: "1000:1000"
     init: true
     restart: on-failure
