--- a/navidrome/umbrel-app.yml
+++ b/navidrome/umbrel-app.yml
@@ -56,4 +56,4 @@ releaseNotes: >-
 
   Full release notes are available at https://github.com/navidrome/navidrome/releases/tag/v0.52.5
 submitter: owmsoton
-submission:
+submission: https://github.com/getumbrel/umbrel-apps/pull/1232
